--- a/hdsdla.html
+++ b/hdsdla.html
@@ -53,7 +53,7 @@
 			<p>
 				<br />
 				<br />
-				<a href="legendarium.html" title="Inicio">Inicio</a>
+				<a href="index.html" title="Inicio">Inicio</a>
 			</p>
 		</div>
 	</body>
