--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Sebastian Adell Arrufat</title>
 		
 		<link href="css.css" rel="stylesheet" type="text/css" />
-		
     </head>
     
     <body>
@@ -90,6 +89,34 @@
 					
 				</fieldset>
 			</form>
+			
+			<p>
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+			</p>
+			
+			<a type="application/rss+xml" href="legendariumfeed.xml">
+				<img src="https://www.logolynx.com/images/logolynx/f0/f0ca9241cd7ab7f8b4a0d4509b56bf38.jpeg" width="25" height="50" />
+			</a>
 		</div>
     </body>
 </html>
