--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</p>
 			
 			<a type="application/rss+xml" href="legendariumfeed.xml">
-				<img src="https://www.logolynx.com/images/logolynx/f0/f0ca9241cd7ab7f8b4a0d4509b56bf38.jpeg" width="25" height="50" />
+				<img src="imagenes/logo.jpg" />
 			</a>
 		</div>
     </body>
