--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</p>
 			
 			<a type="application/rss+xml" href="legendariumfeed.xml">
-				<img src="imagenes/logo.jpg" />
+				<img src="imagenes/logo.png" width="25" height="25" />
 			</a>
 		</div>
     </body>
